# DHCP_DNS_client-server

./: Makefile  Network_concepts.md  README.md  client  client-server_communication.md  common.h  localserver.c  server  tcpclient.c  tcpserver.c
DOC/: CLIENT_SERVER.md  DHCP.MD  Networking_in_linux.md  README.md  client-server_communication.md
DOC/TCP/: IP.md
parsing_with_c/: data_sized.c  print_bits.c  tcp_flags.c
socketProgramming/: CMakeLists.txt  Makefile  client.c  common.h  readline.c  readline.h  readn.h  server.c  str_cli.c  str_cli.h  str_echo.c  str_echo.h  tcpclient.c  writen.c  writen.h
socketProgramming/include/: DHCP.h  common.h  readline.h  readn.h  sig_chld.h  signal.h  str_cli.h  str_echo.h  writen.h
socketProgramming/src/: DHCP.c  checkout_ip.c  client.c  convert_ip_int.c  init_pool.c  int_to_ip.c  ip_to_int.c  main.c  readline.c  readn.c  release_ip.c  server.c  sig_chld.c  signal.c  str_cli.c  str_echo.c  writen.c
